objects/specright__Spec_Family__c.object
<CustomObject>
    <fields>
        <fullName>SR_Customer_Shipper_Lot_Code__c</fullName>
        <formula>TEXT(SR_Customer__r.SR_Expiration_Lot_Coding_Requirements__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Shipper Lot Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Regulated_Category__c</fullName>
        <label>Regulated Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cosmetic (FDA)</fullName>
                </value>
                <value>
                    <fullName>Disinfectant (EPA)</fullName>
                </value>
                <value>
                    <fullName>General Purpose Surface Cleaning (CPSC)</fullName>
                </value>
                <value>
                    <fullName>DrugOTC/Drug (FDA)</fullName>
                    <label>OTC/Drug (FDA)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR_Sub_Assembly_Closure_Type__c</fullName>
        <formula>TEXT(SR_Sub_Assembly__r.SR_Closure_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Assembly Closure Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Sub_Assembly__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Assembly</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>specright__Spec_Family__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Spec_BOM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>specright__Spec_Family__c</referenceTo>
        <relationshipLabel>Pack Outs</relationshipLabel>
        <relationshipName>Finished_Goods</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>